// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component: stories > Base stories > Story Autocomplete 1`] = `
"<div contenteditable="true">
  <span>Hello, clickable marked @world!</span>
</div>"
`;

exports[`Component: stories > Base stories > Story Configured 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <span>Enter the '@' for calling </span>
      <button type="button" contenteditable="false">primary</button>
      <span> suggestions and '/' for </span>
      <button type="button" contenteditable="false">default</button>
      <span>!&#10;Mark is can be a any component with any logic. In this example it is the </span>
      <button type="button" contenteditable="false">Button</button>
      <span>: clickable primary or secondary.&#10;For found mark used </span>
      <button type="button" contenteditable="false">annotations</button>
      <span>.</span>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="Enter the '@' for calling @[primary](primary:4) suggestions and '/' for @[default](default:7)!&#10;Mark is can be a any component with any logic. In this example it is the @[Button](primary:54): clickable primary or secondary.&#10;For found mark used @[annotations](default:123).">Enter the '@' for calling @[primary](primary:4) suggestions and '/' for @[default](default:7)!&#10;Mark is can be a any component with any logic. In this example it is the @[Button](primary:54): clickable primary or secondary.&#10;For found mark used @[annotations](default:123).</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>37 words · 271 chars · 3 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Base stories > Story Default 1`] = `
"<div contenteditable="true">
  <span>Hello, clickable marked </span>
  <mark contenteditable="false">world</mark>
  <span>!</span>
</div>"
`;

exports[`Component: stories > Clipboard stories > Story Drag 1`] = `
"<div contenteditable="true">
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>hello&#10;</span>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <mark data-testid="mark" contenteditable="false">world</mark>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>&#10;foo</span>
  </div>
</div>"
`;

exports[`Component: stories > Clipboard stories > Story Inline 1`] = `
"<div contenteditable="true">
  <span>hello </span>
  <mark data-testid="mark" contenteditable="false">world</mark>
  <span> foo</span>
</div>"
`;

exports[`Component: stories > Clipboard stories > Story NestedMarkStory 1`] = `
"<div contenteditable="true">
  <span>hello </span>
  <mark data-testid="mark" contenteditable="false">
    <strong>wor</strong>
    <em>ld</em>
  </mark>
  <span> foo</span>
</div>"
`;

exports[`Component: stories > Clipboard stories > Story PlainText 1`] = `
"<div contenteditable="true">
  <span>abc</span>
</div>"
`;

exports[`Component: stories > Drag stories > Story Markdown 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <span>Welcome to </span>
            <span>
              <span>
                <span>Marked Input</span>
              </span>
            </span>
            <span></span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>A powerful library for parsing rich text with markdown formatting.&#10;&#10;</span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <span>Features</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <span></span>
            <span>
              <span>
                <span>Bold</span>
              </span>
            </span>
            <span> and </span>
            <span>
              <span>
                <span>italic</span>
              </span>
            </span>
            <span> text support</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <span></span>
            <span contenteditable="false">Code snippets</span>
            <span> and </span>
            <span contenteditable="false">code blocks</span>
            <span></span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <span></span>
            <span contenteditable="false">Strikethrough</span>
            <span> for deleted content</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <span>Links like </span>
            <span contenteditable="false">GitHub</span>
            <span></span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <span>Example</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span contenteditable="false">const parser = new ParserV2(['**__value__**', '*__value__*'])&#10;const result = parser.parse('Hello **world**!')&#10;</span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>&#10;&#10;Visit our docs for more details.</span>
      </div>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="# Welcome to **Marked Input**&#10;&#10;A powerful library for parsing rich text with markdown formatting.&#10;&#10;## Features&#10;&#10;- **Bold** and *italic* text support&#10;&#10;- \`Code snippets\` and \`code blocks\`&#10;&#10;- ~~Strikethrough~~ for deleted content&#10;&#10;- Links like [GitHub](https://github.com)&#10;&#10;## Example&#10;&#10;\`\`\`javascript&#10;const parser = new ParserV2(['**__value__**', '*__value__*'])&#10;const result = parser.parse('Hello **world**!')&#10;\`\`\`&#10;&#10;Visit our docs for more details."># Welcome to **Marked Input**&#10;&#10;A powerful library for parsing rich text with markdown formatting.&#10;&#10;## Features&#10;&#10;- **Bold** and *italic* text support&#10;&#10;- \`Code snippets\` and \`code blocks\`&#10;&#10;- ~~Strikethrough~~ for deleted content&#10;&#10;- Links like [GitHub](https://github.com)&#10;&#10;## Example&#10;&#10;\`\`\`javascript&#10;const parser = new ParserV2(['**__value__**', '*__value__*'])&#10;const result = parser.parse('Hello **world**!')&#10;\`\`\`&#10;&#10;Visit our docs for more details.</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>59 words · 444 chars · 22 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Drag stories > Story MarkdownDrag 1`] = `
"<div>
  <div contenteditable="true">
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>Welcome to Draggable Blocks</span>
        </span>
      </span>
    </div>
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>This is the first paragraph.&#10;&#10;This is the second paragraph.&#10;&#10;</span>
    </div>
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>Features</span>
        </span>
      </span>
    </div>
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>Drag handles appear on hover</span>
        </span>
      </span>
    </div>
  </div>
  <pre># Welcome to Draggable Blocks&#10;&#10;This is the first paragraph.&#10;&#10;This is the second paragraph.&#10;&#10;## Features&#10;&#10;- Drag handles appear on hover&#10;&#10;</pre>
</div>"
`;

exports[`Component: stories > Drag stories > Story PlainTextDrag 1`] = `
"<div>
  <div contenteditable="true">
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>First block of plain text</span>
        </span>
      </span>
    </div>
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>Second block of plain text</span>
        </span>
      </span>
    </div>
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>Third block of plain text</span>
        </span>
      </span>
    </div>
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>Fourth block of plain text</span>
        </span>
      </span>
    </div>
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>Fifth block of plain text</span>
        </span>
      </span>
    </div>
  </div>
  <pre>First block of plain text&#10;&#10;Second block of plain text&#10;&#10;Third block of plain text&#10;&#10;Fourth block of plain text&#10;&#10;Fifth block of plain text&#10;&#10;</pre>
</div>"
`;

exports[`Component: stories > Drag stories > Story ReadOnlyDrag 1`] = `
"<div contenteditable="false">
  <div data-testid="block">
    <span>
      <span>
        <span>Read-Only Content</span>
      </span>
    </span>
  </div>
  <div data-testid="block">
    <span>
      <span>
        <span>Section A</span>
      </span>
    </span>
  </div>
  <div data-testid="block">
    <span>
      <span>
        <span>Section B</span>
      </span>
    </span>
  </div>
</div>"
`;

exports[`Component: stories > Drag stories > Story TodoListDrag 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <span>📋 Project Launch Checklist</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☐</span>
          <span>
            <span>Design Phase</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☐</span>
          <span>
            <span>Create wireframes</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☑</span>
          <span>
            <span>Define color palette</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☐</span>
          <span>
            <span>Design component library</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☑</span>
          <span>
            <span>Research</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☑</span>
          <span>
            <span>Analyze competitors</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☑</span>
          <span>
            <span>User interviews</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☑</span>
          <span>
            <span>Draft interview questions</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☑</span>
          <span>
            <span>Schedule 5 sessions</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☐</span>
          <span>
            <span>Development</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☐</span>
          <span>
            <span>Set up CI/CD pipeline</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☑</span>
          <span>
            <span>Write unit tests</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☐</span>
          <span>
            <span>API integration</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☐</span>
          <span>
            <span>Auth endpoints</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☐</span>
          <span>
            <span>Data sync</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☐</span>
          <span>
            <span>Launch</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☐</span>
          <span>
            <span>Final QA pass</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span contenteditable="false">☐</span>
          <span>
            <span>Deploy to production</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <span>☐ = pending  ☑ = done</span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="# 📋 Project Launch Checklist&#10;&#10;- [ ] Design Phase&#10;	- [ ] Create wireframes&#10;	- [x] Define color palette&#10;	- [ ] Design component library&#10;- [x] Research&#10;	- [x] Analyze competitors&#10;	- [x] User interviews&#10;		- [x] Draft interview questions&#10;		- [x] Schedule 5 sessions&#10;- [ ] Development&#10;	- [ ] Set up CI/CD pipeline&#10;	- [x] Write unit tests&#10;	- [ ] API integration&#10;		- [ ] Auth endpoints&#10;		- [ ] Data sync&#10;- [ ] Launch&#10;	- [ ] Final QA pass&#10;	- [ ] Deploy to production&#10;&gt; ☐ = pending  ☑ = done&#10;&#10;"># 📋 Project Launch Checklist&#10;&#10;- [ ] Design Phase&#10;	- [ ] Create wireframes&#10;	- [x] Define color palette&#10;	- [ ] Design component library&#10;- [x] Research&#10;	- [x] Analyze competitors&#10;	- [x] User interviews&#10;		- [x] Draft interview questions&#10;		- [x] Schedule 5 sessions&#10;- [ ] Development&#10;	- [ ] Set up CI/CD pipeline&#10;	- [x] Write unit tests&#10;	- [ ] API integration&#10;		- [ ] Auth endpoints&#10;		- [ ] Data sync&#10;- [ ] Launch&#10;	- [ ] Final QA pass&#10;	- [ ] Deploy to production&#10;&gt; ☐ = pending  ☑ = done&#10;&#10;</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>101 words · 484 chars · 23 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Dynamic stories > Story Dynamic 1`] = `
"<div contenteditable="true">
  <span>Hello, dynamical mark </span>
  <mark contenteditable="false">world</mark>
  <span>!</span>
</div>"
`;

exports[`Component: stories > Dynamic stories > Story Focusable 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <span>Hello, </span>
      <abbr title="By key operations" contenteditable="false">focusable</abbr>
      <span> abbreviation </span>
      <abbr title="Hello! Hello!" contenteditable="false">world</abbr>
      <span>!</span>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="Hello, @[focusable](By key operations) abbreviation @[world](Hello! Hello!)!">Hello, @[focusable](By key operations) abbreviation @[world](Hello! Hello!)!</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>7 words · 76 chars · 1 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Dynamic stories > Story Removable 1`] = `
"<div contenteditable="true">
  <span>I </span>
  <mark contenteditable="false">contain</mark>
  <span> </span>
  <mark contenteditable="false">removable</mark>
  <span> by click </span>
  <mark contenteditable="false">marks</mark>
  <span>!</span>
</div>"
`;

exports[`Component: stories > Nested stories > Story HtmlLikeTags 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <span></span>
      <div>
        <span>
          <span>This is a div with </span>
          <mark>
            <span>
              <span>a mark inside</span>
            </span>
          </mark>
          <span> and </span>
          <b>
            <span>
              <span>bold text with </span>
              <del>
                <span>
                  <span>nested del</span>
                </span>
              </del>
              <span></span>
            </span>
          </b>
          <span></span>
        </span>
      </div>
      <span></span>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="&lt;div&gt;This is a div with &lt;mark&gt;a mark inside&lt;/mark&gt; and &lt;b&gt;bold text with &lt;del&gt;nested del&lt;/del&gt;&lt;/b&gt;&lt;/div&gt;">&lt;div&gt;This is a div with &lt;mark&gt;a mark inside&lt;/mark&gt; and &lt;b&gt;bold text with &lt;del&gt;nested del&lt;/del&gt;&lt;/b&gt;&lt;/div&gt;</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>14 words · 104 chars · 1 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Nested stories > Story MultipleLevels 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <span>Check </span>
      <span>
        <span>
          <span>this tag with </span>
          <span>
            <span>
              <span>nested mention with </span>
              <span>
                <span>
                  <span>code</span>
                </span>
              </span>
              <span></span>
            </span>
          </span>
          <span></span>
        </span>
      </span>
      <span> and </span>
      <span>
        <span>
          <span>another </span>
          <span>
            <span>
              <span>deeply nested</span>
            </span>
          </span>
          <span> tag</span>
        </span>
      </span>
      <span></span>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="Check #[this tag with @[nested mention with \`code\`]] and #[another #[deeply nested] tag]">Check #[this tag with @[nested mention with \`code\`]] and #[another #[deeply nested] tag]</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>13 words · 88 chars · 1 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Nested stories > Story SimpleNesting 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <span>This is </span>
      <span>
        <span>
          <span>italic text with </span>
          <span>
            <span>
              <span>bold</span>
            </span>
          </span>
          <span> inside</span>
        </span>
      </span>
      <span> and more text.</span>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="This is *italic text with **bold** inside* and more text.">This is *italic text with **bold** inside* and more text.</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>10 words · 57 chars · 1 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Overlay stories > Story CustomOverlay 1`] = `
"<div contenteditable="true">
  <span>Hello, custom overlay by trigger @!</span>
</div>"
`;

exports[`Component: stories > Overlay stories > Story CustomTrigger 1`] = `
"<div contenteditable="true">
  <span>Hello, custom overlay by trigger /!</span>
</div>"
`;

exports[`Component: stories > Overlay stories > Story DefaultOverlay 1`] = `
"<div contenteditable="true">
  <span>Hello, default - suggestion overlay by trigger @!</span>
</div>"
`;

exports[`Component: stories > Overlay stories > Story PositionedOverlay 1`] = `
"<div contenteditable="true">
  <span>Hello, positioned overlay by trigger @!</span>
</div>"
`;

exports[`Component: stories > Overlay stories > Story SelectableOverlay 1`] = `
"<div contenteditable="true">
  <span>Hello, suggest overlay by trigger @!</span>
</div>"
`;

exports[`Component: stories > Selection stories > Story Drag 1`] = `
"<div contenteditable="true">
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>hello&#10;</span>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <mark data-testid="mark" contenteditable="false">world</mark>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>&#10;foo</span>
  </div>
</div>"
`;

exports[`Component: stories > Selection stories > Story Inline 1`] = `
"<div contenteditable="true">
  <span>hello </span>
  <mark data-testid="mark" contenteditable="false">world</mark>
  <span> foo</span>
</div>"
`;

exports[`Component: stories > Slots stories > Story DataAttributes 1`] = `
"<div>
  <div>
    <div data-test-id="marked-input-demo" data-module="slots-api" data-user-id="user-123" contenteditable="true">
      <span>Use @[data] attributes for testing and tracking</span>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="Use @[data] attributes for testing and tracking">Use @[data] attributes for testing and tracking</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>7 words · 47 chars · 1 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Slots stories > Story StyleMerging 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <span>Container has @[merged] styles from multiple sources</span>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="Container has @[merged] styles from multiple sources">Container has @[merged] styles from multiple sources</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>7 words · 52 chars · 1 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Slots stories > Story WithSlotProps 1`] = `
"<h3>Styling &amp; Events via slotProps</h3>
<p>Customize styling and add custom event handlers without replacing components:</p>
<div contenteditable="true">
  <span></span>
</div>
<div>
  <strong>Recent events:</strong>
  <p>No events yet</p>
</div>"
`;
